--- a/readux/books/templates/books/snippets/list_volume_cover.html
+++ b/readux/books/templates/books/snippets/list_volume_cover.html
@@ -1,5 +1,5 @@
 {% load readux_utils %}
-<li class="cover" {% if obj.primary_image %}style="background-image:url('{{ obj.primary_image.iiif.thumbnail }}');background-color:#EEE;"{% endif %}>
+<li class="cover" {% if obj.primary_image %}style="background-image:url('{% url 'books:page-image' obj.pid obj.primary_image.pid 'thumbnail' %}');background-color:#EEE;"{% endif %}>
     {% url 'books:volume' obj.pid as volume_url %}
     <a href="{{ volume_url }}" title="{{ obj.title|truncatechars:100 }}">
         {# show the title if there is no image #}
