--- a/readux/books/templates/books/volume_detail.html
+++ b/readux/books/templates/books/volume_detail.html
@@ -1,7 +1,7 @@
 {% extends 'site_base.html' %}
 
 {% block metadata %}{{ block.super }}
-  {% with image_url=vol.primary_image.iiif.thumbnail %}
+    {% url 'books:page-image' vol.pid vol.primary_image.pid 'thumbnail' as image_url %}
     <meta property="og:title" content="{{ vol.display_label }}"/>
     <meta itemprop="og:headline" content="{{ vol.display_label }}" />
     <meta property="og:image" content="{{ image_url }}"/>
@@ -11,7 +11,6 @@
     <meta property="twitter:title" content="{{ vol.display_label }}" />
     <meta property="twitter:image" content="{{ image_url }}" />
     <meta property="twitter:description" content="{{ vol.book.best_description }}" />
-  {% endwith %}
 {% endblock %}
 
 {% block page-subtitle %}{{ vol.display_label }} | {% endblock %}
@@ -30,12 +29,11 @@
         <div class="media">
             {% if vol.primary_image %}
                 <div class="pull-left">
-                    {% with cover_url=vol.primary_image.iiif.thumbnail %}
+                    {% url 'books:page-image' vol.pid vol.primary_image.pid 'thumbnail' as cover_url %}
                     {% if vol.has_pages %}<a href="{% url 'books:page' vol.pid vol.primary_image.pid %}">{% endif %}
                     <img class="thumbnail media-object" property="schema:image" src="{{ cover_url }}"/>
                     {% if vol.has_pages %}</a>{% endif %}
                     <a property="schema:thumbnailUrl" href="{{ cover_url }}" class="hidden"></a>
-                    {% endwith %}
                 </div>
             {% endif %}
 
