Annotated volume export functionality
- export menu from volume page for tei/static website
- javascript to indicate long-running download
- export view and function to generate built jekyll site zip
- include jekyll base site zip as readux fixture
- run jekyll import & build in quiet mode

[#91623730]

--- a/readux/books/templates/books/volume_detail.html
+++ b/readux/books/templates/books/volume_detail.html
@@ -1,4 +1,5 @@
 {% extends 'site_base.html' %}
+{% load static %}
 
 {% block metadata %}{{ block.super }}
     {% url 'books:page-image' vol.pid vol.primary_image.pid 'thumbnail' as image_url %}
@@ -22,9 +23,17 @@
   <link rel="alternate" href="{% url 'books:text' vol.pid %}" type="text/plain" /> {# plain text #}
 {% endblock %}
 
+{% block javascript %}
+  {{ block.super }}
+   <script type="text/javascript" src="{% static 'js/js.cookie.js' %}"></script>
+{% endblock %}
+
 {% block content %}
 <div class="container" typeof="schema:Book">
+
     {% include 'books/snippets/volume_header.html' with rdfa=1 %}
+
+    {% include 'books/snippets/volume_export.html'  %}
     <article class="book">
         <div class="media">
             {% if vol.primary_image %}
