Add missing text/css for stylesheet include

--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -6,7 +6,7 @@
 {% block css %}
   {{ block.super }}
   {# local copy of annotator v2.0-alpha css #}
-  <link rel="stylesheet" href="{% static 'plugins/annotator/annotator.min.css' %}"/>
+  <link rel="stylesheet" type="text/css" href="{% static 'plugins/annotator/annotator.min.css' %}"/>
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-meltdown/build/0.1.0/annotator.meltdown.min.css" />
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-marginalia/build/0.1.1/annotator.marginalia.min.css" />
 {% endblock %}
