--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -1032,20 +1032,13 @@ header#page-bg .collection-image-info.collasped .info{
     margin-top: -5px;
     margin-bottom: -5px;
 }
-.social-login button:hover,
-.social-login button:focus{
+.social-login button:hover, .social-login button:focus,
+.social-login a.btn:hover, .social-login a.btn:focus {
   background-color: #42A5F5;
   color: white;
   text-decoration:none;
 }
 
-.social-login .fa {
-    border-right: 1px solid black;
-    padding: 5px;
-    margin: 0 5px 0 0;
-    width: 30px;  /* make all the icons consistent width */
-    text-align: center;
-}
 .modal-backdrop{
   z-index: 300;
 }
@@ -1086,9 +1079,14 @@ header#page-bg .collection-image-info.collasped .info{
 }
 
 .login-list li.list-group-item a:hover,
-.login-list li.list-group-item a:focus{
+.login-list li.list-group-item a:focus {
   text-decoration:none;
   opacity:0.7;
+}
+
+.login-list li.list-group-item.disabled a {
+  text-decoration:none;
+   opacity:0.5;
 }
 
 .login-list li.list-group-item a span{
@@ -1136,9 +1134,15 @@ header#page-bg .collection-image-info.collasped .info{
     margin: 11px 0;
     padding: 4px;
 }
-
-.meltdown_wrap{
-  width:100% !important;
+@media(max-width:1020px, min-width: 768px){
+    .social-login .text {
+        display: none;
+    }
+}
+@media(max-width:1020px) {
+    .social-login #login-welcome {
+        display:none;
+    }
 }
 
 .meltdown_bar{
