--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="{% static 'js/openseadragon/openseadragon.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/deepzoom.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/hammer.min.js' %}"></script>
 
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-marginalia/src/scripts/bootstrap.dropdown.js"></script>
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-marginalia/build/0.1.1/annotator.marginalia.min.js"></script>
@@ -30,7 +31,9 @@
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.selectionIds.js' %}"></script>
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-imgselect/src/jquery.imgareaselect-0.9.10/css/imgareaselect-default.css" />
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-imgselect/build/0.2.2/annotator.imgselect.min.js"></script>
+
   {% include 'books/snippets/book-page.js' %}
+
 {% endblock %}
 
 {% block metadata %}
@@ -111,12 +114,12 @@
         </div>
 
         {% if prev %}
-        <a class="left carousel-control" href="{% url 'books:page' page.volume.pid prev.pid %}" role="button" data-slide="prev" title="Prev: Page {{ prev.page_order }}">
+        <a class="left carousel-control" href="{% url 'books:page' page.volume.pid prev.pid %}" role="button" data-slide="prev" title="Prev: Page {{ prev.page_order }}" rel="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
         {% endif %}
         {% if next %}
-        <a class="right carousel-control" href="{% url 'books:page' page.volume.pid next.pid %}" role="button" data-slide="next" title="Next: Page {{ next.page_order }}">
+        <a class="right carousel-control" href="{% url 'books:page' page.volume.pid next.pid %}" role="button" data-slide="next" title="Next: Page {{ next.page_order }}" rel="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
         {% endif %}
