--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -76,7 +76,7 @@
       {# TODO: help text #}
 
       <span class="input-group-btn">
-        <button type="submit" class="btn">
+        <button type="submit" class="btn btn-primary">
             <span class="glyphicon glyphicon-search"></span>
         </button>
       </span>
