Make permalink label consistent between volume and page

--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -114,7 +114,7 @@
         </div>
 
       {% if page.ark_uri %}
-        <p><strong>Permanent URL:</strong> <a href="{{ page.ark_uri }}" rel="bookmark">{{ page.ark_uri }}</a></p>
+        <p><strong>Permalink:</strong> <a href="{{ page.ark_uri }}" rel="bookmark">{{ page.ark_uri }}</a></p>
       {% endif %}
 
 
