Preliminary entry of related pages with jquery-ui autocomplete
- new related-pages annotater plugin to add related page ark uri
- configure related-pages to use volume-specific search url
- autocomplete with context/thumbnail display for page search
- add jquery-ui css + js (minimum to get autocomplete only)

[#85805172]

--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -4,11 +4,13 @@
 {% block page-subtitle %}{{ page.display_label }} | {% endblock %}
 
 {% block css %}
-  {{ block.super }}
+
   {# local copy of annotator v2.0-alpha css #}
   <link rel="stylesheet" type="text/css" href="{% static 'plugins/annotator/annotator.min.css' %}"/>
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-meltdown/build/0.1.0/annotator.meltdown.min.css" />
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-marginalia/build/0.1.1/annotator.marginalia.min.css" />
+  <link rel="stylesheet" href="{% static 'plugins/jquery-ui/jquery-ui.min.css' %}"/>
+      {{ block.super }}
 {% endblock %}
 
 {% block javascript %}
@@ -25,9 +27,12 @@
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-marginalia/src/scripts/bootstrap.dropdown.js"></script>
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-marginalia/build/0.1.1/annotator.marginalia.min.js"></script>
 
-  <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown/build/0.1.0/annotator.meltdown.min.js"></script>
+ <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown/build/0.1.1/annotator.meltdown.min.js"></script>
 
   <script type="text/javascript" src="{% static 'plugins/annotator/suppress_permissions.js' %}"></script>
+
+  <script type="text/javascript" src="{% static 'plugins/jquery-ui/jquery-ui.autocomplete.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'plugins/annotator/related-pages.js' %}"></script>
   <script type="text/javascript" src="{% static 'plugins/annotator/annotator.selectionIds.js' %}"></script>
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-imgselect/src/jquery.imgareaselect-0.9.10/css/imgareaselect-default.css" />
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-imgselect/build/0.2.2/annotator.imgselect.min.js"></script>
