Update to annotator-meltdown 0.2 for audio in annotations
[#85805608]

--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -1242,3 +1242,8 @@ button.volume-export {
 .annotator-related-pages {
     padding-left: 5px;
 }
+
+.marginalia-item audio {
+    width: 99%;
+    display: block;
+}
