--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -1134,6 +1134,20 @@ header#page-bg .collection-image-info.collasped .info{
     color: white;
 }
 
+/* zotero - dark red from the logo */
+.login-list .login-zotero a {
+    background-color: #990000;
+    color: white;
+}
+
+/* no font-awesome icon for Zotero; emulate the Z from their logo */
+.login-zotero .login-icon.fa-zotero:before {
+    content: "Z";
+    font-weight: bold;
+    font: sans-serif;
+    font-size: 105%;
+}
+
 .carousel-inner{
   overflow: visible;
 }
