Reorganize javascript to clearly differentiate local and external code

--- a/readux/books/templates/books/volume_detail.html
+++ b/readux/books/templates/books/volume_detail.html
@@ -25,7 +25,7 @@
 
 {% block javascript %}
   {{ block.super }}
-   <script type="text/javascript" src="{% static 'js/js.cookie.js' %}"></script>
+   <script type="text/javascript" src="{% static 'ext/js.cookie.js' %}"></script>
 {% endblock %}
 
 {% block content %}
