--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block javascript %}
-    <script type="text/javascript" src="{% static 'js/isotope.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'ext/isotope.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/local.js' %}"></script>
 {% endblock %}
 
