--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -6,28 +6,28 @@
 {% block css %}
 
   {# local copy of annotator v2.0-alpha css #}
-  <link rel="stylesheet" type="text/css" href="{% static 'plugins/annotator/annotator.min.css' %}"/>
+  <link rel="stylesheet" type="text/css" href="{% static 'ext/annotator/annotator.min.css' %}"/>
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-meltdown/build/0.2.2/annotator.meltdown.min.css" />
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-marginalia/build/0.2.2/annotator.marginalia.min.css" />
-  <link rel="stylesheet" href="{% static 'plugins/jquery-ui/jquery-ui.min.css' %}"/>
+  <link rel="stylesheet" href="{% static 'ext/jquery-ui/jquery-ui.min.css' %}"/>
       {{ block.super }}
 {% endblock %}
 
 {% block javascript %}
   {{ block.super }}
   {# local copy of annotator; currently v2.0.0-alpha.2 #}
-  <script type="text/javascript" src="{% static 'js/annotator.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/openseadragon/openseadragon.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'ext/annotator.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'ext/openseadragon/openseadragon.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/deepzoom.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/hammer.min.js' %}"></script>
 
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-marginalia/build/0.2.2/annotator.marginalia.min.js"></script>
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown/build/0.2.2/annotator.meltdown.min.js"></script>
-  <script type="text/javascript" src="{% static 'plugins/annotator/suppress_permissions.js' %}"></script>
-  <script type="text/javascript" src="{% static 'plugins/jquery-ui/jquery-ui.autocomplete.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'plugins/annotator/related-pages.js' %}"></script>
-  <script type="text/javascript" src="{% static 'plugins/annotator/annotator.selectionIds.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/annotator/suppress-permissions.js' %}"></script>
+  <script type="text/javascript" src="{% static 'ext/jquery-ui/jquery-ui.autocomplete.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/annotator/related-pages.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/annotator/selection-ids.js' %}"></script>
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-imgselect/src/jquery.imgareaselect-0.9.10/css/imgareaselect-default.css" />
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-imgselect/build/0.2.2/annotator.imgselect.min.js"></script>
 
