Zotero style/placement improvements, notes towards inserting citation
[https://www.pivotaltracker.com/story/show/85804990]

--- a/sitemedia/css/annotator.meltdown.zotero.css
+++ b/sitemedia/css/annotator.meltdown.zotero.css
@@ -19,7 +19,16 @@
 }
 
 
-
+/* Zotero launcher button on meltdown control panel */
 .meltdown_control-zotero > span  {
-    color: #990000 !important;
+    /* zotero red */
+    /*color: #990000 !important;
+    font-weight: bold;*/
+    color: transparent !important;  /* make text Z invisible */
+    background-image: url('../img/zotero_16x16.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-top: -3px; /* bring closer in line to other controls */
 }
+
+
