--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -7,7 +7,7 @@
 
   {# local copy of annotator v2.0-alpha css #}
   <link rel="stylesheet" type="text/css" href="{% static 'ext/annotator/annotator.min.css' %}"/>
-  <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-meltdown/build/0.2.2/annotator.meltdown.min.css" />
+  <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-meltdown/build/0.3.0-pre/annotator.meltdown.min.css" />
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-marginalia/build/0.2.2/annotator.marginalia.min.css" />
   <link rel="stylesheet" href="{% static 'ext/jquery-ui/jquery-ui.min.css' %}"/>
   <link rel="stylesheet" type="text/css" href="{% static 'css/annotator.meltdown.zotero.css' %}"/>
@@ -24,7 +24,7 @@
   <script type="text/javascript" src="{% static 'js/hammer.min.js' %}"></script>
 
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-marginalia/build/0.2.2/annotator.marginalia.min.js"></script>
-  <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown/build/0.2.2/annotator.meltdown.min.js"></script>
+  <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown/build/0.3.0-pre/annotator.meltdown.min.js"></script>
   <script type="text/javascript" src="{% static 'js/annotator/suppress-permissions.js' %}"></script>
   <script type="text/javascript" src="{% static 'ext/jquery-ui/jquery-ui.autocomplete.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/annotator/related-pages.js' %}"></script>
