--- a/sitemedia/css/annotator.meltdown.zotero.css
+++ b/sitemedia/css/annotator.meltdown.zotero.css
@@ -1,4 +1,4 @@
-#zotero-modal label {
+#zotero-modal .zotero-icon {
     height: 32px;
     width: 32px;
     color: transparent;  /* make text Z invisible */
@@ -18,6 +18,13 @@
     right: 20px;
 }
 
+/* override close button so it is actually click-able */
+#zotero-modal .close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
+
 
 /* Zotero launcher button on meltdown control panel */
 .meltdown_control-zotero > span  {
@@ -29,6 +36,11 @@
     background-repeat: no-repeat;
     background-position: center;
     margin-top: -3px; /* bring closer in line to other controls */
+}
+
+.meltdown_control-zotero.zotero-disabled > span  {
+    opacity: 0.6;
+    background-color: #ddd;
 }
 
 
