Use preliminary external release of annotator-meltdown-zotero plugin
[#85804990]

--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -9,9 +9,10 @@
   <link rel="stylesheet" type="text/css" href="{% static 'ext/annotator/annotator.min.css' %}"/>
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-meltdown/build/0.3.0-pre/annotator.meltdown.min.css" />
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-marginalia/build/0.2.2/annotator.marginalia.min.css" />
-  <link rel="stylesheet" href="{% static 'ext/jquery-ui/jquery-ui.min.css' %}"/>
-  <link rel="stylesheet" type="text/css" href="{% static 'css/annotator.meltdown.zotero.css' %}"/>
   {{ block.super }}
+  <!-- annotator-meltdown-zotero -->
+  <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0-pre/annotator.meltdown.zotero.min.css" />
+
 {% endblock %}
 
 {% block javascript %}
@@ -33,9 +34,7 @@
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-imgselect/src/jquery.imgareaselect-0.9.10/css/imgareaselect-default.css" />
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-imgselect/build/0.2.2/annotator.imgselect.min.js"></script>
 
-  <script type="text/javascript" src="{% static 'js/annotator/meltdown-zotero.js' %}"></script>
-  <script type="text/javascript" src="{% static 'ext/jquery.rest.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/zotero.js' %}"></script>
+  <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0-pre/annotator.meltdown.zotero.min.js"></script>
 
   {% include 'books/snippets/book-page.js' %}
 
