--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -26,15 +26,15 @@
 
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-marginalia/build/0.2.2/annotator.marginalia.min.js"></script>
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown/build/0.3.0-pre/annotator.meltdown.min.js"></script>
+  <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0-pre/annotator.meltdown.zotero.min.js"></script> <!-- includes jquery-ui autocomplete, also used by related-pages -->
+
   <script type="text/javascript" src="{% static 'js/annotator/suppress-permissions.js' %}"></script>
-  <script type="text/javascript" src="{% static 'ext/jquery-ui/jquery-ui.autocomplete.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/annotator/related-pages.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/annotator/selection-ids.js' %}"></script>
 
   <link rel="stylesheet" type="text/css" href="http://emory-lits-labs.github.io/annotator-imgselect/src/jquery.imgareaselect-0.9.10/css/imgareaselect-default.css" />
   <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-imgselect/build/0.2.2/annotator.imgselect.min.js"></script>
 
-  <script type="text/javascript" src="http://emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0-pre/annotator.meltdown.zotero.min.js"></script>
 
   {% include 'books/snippets/book-page.js' %}
 
