Style html5 video to fit within annotation
[#115949787]

--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -1266,7 +1266,7 @@ button.volume-export {
     padding-left: 5px;
 }
 
-.marginalia-item audio {
+.marginalia-item audio, .marginalia-item video {
     width: 99%;
     display: block;
 }
