--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -30,6 +30,7 @@
   <script type="text/javascript" src="{% static 'js/annotator/suppress-permissions.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/annotator/related-pages.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/annotator/selection-ids.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/annotator/annotator.search.js' %}"></script>
 
   <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-imgselect/src/jquery.imgareaselect-0.9.10/css/imgareaselect-default.css" />
   <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-imgselect/build/0.2.2/annotator.imgselect.min.js"></script>
