--- a/readux/books/templates/books/snippets/volume_header.html
+++ b/readux/books/templates/books/snippets/volume_header.html
@@ -11,18 +11,6 @@ Expects volume object as vol; set rdfa to true to enable RDFa properties.
       <a class="trigger" href="#">Search this volume</a>
       {% include 'books/snippets/volume_search_form.html' %}
     </div>
-    <div class="form-group annotation-search">
-      <div class="input-group">
-          <label class="sr-only" for="annotation-search">Search annotations on this volume</label>
-          <input type="text" class="form-control" placeholder="Search annotations on this volume..." autocomplete="false"/>
-          <span class="input-group-btn">
-            <button class="btn btn-primary">
-                <span class="glyphicon glyphicon-search"></span>
-                <span class="glyphicon glyphicon-edit"></span>
-            </button>
-          </span>
-      </div>
-    </div>
     {% endif %}
     <h1>
         {# only link to volume landing page if we are not currently *on* that page #}
@@ -59,3 +47,7 @@ Expects volume object as vol; set rdfa to true to enable RDFa properties.
       {% include 'books/snippets/volume_search_form.html' %}
     {% endif %}
 </header>
+
+{% if annotation_search_enabled %} {# should be set in the view based on user, presence of annotations #}
+{% include 'books/snippets/annotation_search_form.html' %}
+{% endif %}
