--- a/readux/books/templates/books/volume_detail.html
+++ b/readux/books/templates/books/volume_detail.html
@@ -26,6 +26,16 @@
 {% block javascript %}
   {{ block.super }}
    <script type="text/javascript" src="{% static 'ext/js.cookie.js' %}"></script>
+
+  <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
+  <script type="text/javascript" src="{% static 'ext/annotator.min.js' %}"></script>
+  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-marginalia/build/0.3.0/annotator.marginalia.min.js"></script>
+  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown/build/0.3.0-pre/annotator.meltdown.min.js"></script>
+  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0-pre/annotator.meltdown.zotero.min.js"></script> <!-- includes jquery-ui autocomplete, also used by related-pages -->
+  <script type="text/javascript" src="{% static 'js/annotator/related-pages.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/annotator/annotator.search.js' %}"></script>
+  <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-meltdown/build/0.3.0-pre/annotator.meltdown.min.css" />
+  <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0-pre/annotator.meltdown.zotero.min.css" />
 {% endblock %}
 
 {% block content %}
@@ -125,4 +135,9 @@
         </div> {# end media #}
     </article>
 </div>
+
+<script>
+   {% include 'books/snippets/annotator-init.js' with volume_uri=vol.absolute_url %}
+</script>
+
 {% endblock %}
