--- a/readux/books/templates/books/volume_pages_list.html
+++ b/readux/books/templates/books/volume_pages_list.html
@@ -19,6 +19,22 @@
     {% endfor %}
 {% endblock %}
 
+{% block javascript %}
+  {{ block.super }}
+  {# additional requirements to support annotation searching #}
+  {% if annotation_search_enabled %}
+  <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
+  <script type="text/javascript" src="{% static 'ext/annotator.min.js' %}"></script>
+  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-marginalia/build/0.3.0/annotator.marginalia.min.js"></script>
+  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown/build/0.3.0-pre/annotator.meltdown.min.js"></script>
+  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0-pre/annotator.meltdown.zotero.min.js"></script> <!-- includes jquery-ui autocomplete, also used by related-pages -->
+  <script type="text/javascript" src="{% static 'js/annotator/related-pages.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/annotator/annotator.search.js' %}"></script>
+  <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-meltdown/build/0.3.0-pre/annotator.meltdown.min.css" />
+  <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0-pre/annotator.meltdown.zotero.min.css" />
+  {% endif %}
+{% endblock %}
+
 {% block content %}
 
 <dv class="container">
@@ -71,4 +87,10 @@
 
     </article>
 </div>
+
+{% if annotation_search_enabled %}
+<script>
+   {% include 'books/snippets/annotator-init.js' with volume_uri=vol.absolute_url %}
+</script>
+{% endif %}
 {% endblock %}
