Tweak css for annotation search to look better in all layouts

--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -1285,7 +1285,7 @@ button.volume-export {
 }
 
 .annotation-search {
-    padding-top: 10px;
+    max-width: 98%;
 }
 
 .annotation-search input.form-control {
