--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -7,11 +7,11 @@
 
   {# local copy of annotator v2.0-alpha css #}
   <link rel="stylesheet" type="text/css" href="{% static 'ext/annotator/annotator.min.css' %}"/>
-  <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-meltdown/build/0.3.0-pre/annotator.meltdown.min.css" />
+  <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-meltdown/build/0.3.0/annotator.meltdown.min.css" />
   <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-marginalia/build/0.2.3/annotator.marginalia.min.css" />
   {{ block.super }}
   <!-- annotator-meltdown-zotero -->
-  <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0-pre/annotator.meltdown.zotero.min.css" />
+  <link rel="stylesheet" type="text/css" href="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0/annotator.meltdown.zotero.min.css" />
 {% endblock %}
 
 {% block javascript %}
@@ -24,8 +24,8 @@
   <script type="text/javascript" src="{% static 'js/hammer.min.js' %}"></script>
 
  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-marginalia/build/0.3.0/annotator.marginalia.min.js"></script>
-  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown/build/0.3.0-pre/annotator.meltdown.min.js"></script>
-  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0-pre/annotator.meltdown.zotero.min.js"></script> <!-- includes jquery-ui autocomplete, also used by related-pages -->
+  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown/build/0.3.0/annotator.meltdown.min.js"></script>
+  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0/annotator.meltdown.zotero.min.js"></script> <!-- includes jquery-ui autocomplete, also used by related-pages -->
 
   <script type="text/javascript" src="{% static 'js/annotator/suppress-permissions.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/annotator/related-pages.js' %}"></script>
