--- a/readux/books/templates/books/page_detail.html
+++ b/readux/books/templates/books/page_detail.html
@@ -23,7 +23,7 @@
   <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/hammer.min.js' %}"></script>
 
- <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-marginalia/build/0.3.0/annotator.marginalia.min.js"></script>
+  <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-marginalia/build/0.4.0-pre/annotator.marginalia.min.js"></script>
   <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown/build/0.3.0/annotator.meltdown.min.js"></script>
   <script type="text/javascript" src="//emory-lits-labs.github.io/annotator-meltdown-zotero/build/0.1.0/annotator.meltdown.zotero.min.js"></script> <!-- includes jquery-ui autocomplete, also used by related-pages -->
 
