Modify web export to allow exporting all annotations shared with a group
* export form now includes a choice field, to select individual
  annotations or all annotations shared with a single group
* convenience methods to access annotations visible to a group,
  using django-guardian shortcut methods
* unrelated: downgraded github account notice from an alert to a
  warning, as it is only required for github export and not web export

[#115948325]

--- a/readux/books/templates/books/volume_export.html
+++ b/readux/books/templates/books/volume_export.html
@@ -22,10 +22,10 @@
       <p>To export an annotated edition of this volume or any other,
       please log in.</p>
     {% else %}
-    {% if error %}
-    <div class="alert alert-danger">
+    {% if warning %}
+    <div class="alert alert-warning">
       <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-      {{ error }}</div>
+      {{ warning }}</div>
     {% endif %}
 
     {% if github_export %}
@@ -54,6 +54,9 @@
             <div class="help-block">{{ field.help_text}}</div>
             <div class="text-warning">{{ field.errors }}</div>
           </div>
+          {% elif field.name = 'annotations' and export_form.hide_annotation_choice %}
+          {# hide annotation choice when flag is set (i.e., only one choice available) #}
+            {{ field|add_class:"hidden" }}
           {% else %}
         <div class="form-group{% if field.errors %} has-error{% endif %}">
             <label for="{{ field.name }}">{{ field.label }}</label>
